--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,9 @@ jobs:
         with:
           dotnet-version: '9.0.x'
 
+      - name: Clean old release
+        run: rm -rf release
+
       - name: Publish Blazor WebAssembly app
         run: |
           dotnet publish MyDevelopmentHouse.csproj -c Release -o release \
